--- a/sections/featured-list-collections.liquid
+++ b/sections/featured-list-collections.liquid
@@ -684,13 +684,13 @@
                 {
                     "type": "collection_list",
                     "id": "top_collections",
-                    "limit": 4,
+                    "limit": 3,
                     "label": "Featured Collections Top Row"
                 },
                 {
                     "type": "collection_list",
                     "id": "bot_collections",
-                    "limit": 2,
+                    "limit": 3,
                     "label": "Featured Collections Bottom Row"
                 },
                 {
@@ -698,15 +698,15 @@
                     "id": "order_alignment",
                     "options": [
                         {
-                            "value": "top",
-                            "label": "Top"
+                            "value": "left",
+                            "label": "Left"
                         },
                         {
-                            "value": "bottom",
-                            "label": "Bottom"
+                            "value": "right",
+                            "label": "Right"
                         }
                     ],
-                    "default": "top",
+                    "default": "left",
                     "label": "Order Collections alignment"
                 },
                 {
