--- a/scss/sections/section-featured-list-collections-collage.scss
+++ b/scss/sections/section-featured-list-collections-collage.scss
@@ -169,6 +169,12 @@
             }
         }
 
+        @media screen and (max-width: 767px) {
+            h3 {
+                font-size: calc(var(--font-heading-scale) * 1.2rem);
+            }
+        }
+
         h5 {
             font-weight: 400;
             margin-bottom: 0;
