--- a/snippets/list-collections-style-block-menu.liquid
+++ b/snippets/list-collections-style-block-menu.liquid
@@ -1,18 +1,16 @@
 {% liquid
-    assign collections = block.settings.featured_collections
-    assign sub_heading = block.settings.collections_sub_heading
-    assign heading = block.settings.collections_title
-    assign text = block.settings.collections_text
-    assign head_alignment = block.settings.head_alignment
+    assign sub_heading = settings.collections_sub_heading
+    assign heading = settings.collections_title
+    assign text = settings.collections_text
+    assign head_alignment = settings.head_alignment
 
-    assign collections = block.settings.featured_collections
-    assign img_size = block.settings.img_size
-    assign text_alignment = block.settings.content_alignment
-    assign full_width = block.settings.full_width
+    assign img_size = settings.img_size
+    assign text_alignment = settings.content_alignment
+    assign full_width = settings.full_width
 
-    assign count = block.settings.count_products
-    assign columns_desktop = block.settings.columns_desktop
-    assign columns_mobile = block.settings.columns_mobile
+    assign count = settings.count_products
+    assign columns_desktop = settings.columns_desktop
+    assign columns_mobile = settings.columns_mobile
 
     if columns_desktop == 4
         assign columns_class = 'col-md-6 col-lg-3'
@@ -32,17 +30,19 @@
         assign columns_mobile_class = 'col-12 col-sm-6'
     endif
 
-    assign background_color = block.settings.block_color | default: 'transparent'
-    assign text_color = block.settings.text_color | default: 'inherit'
-    assign title_color = block.settings.title_color | default: 'inherit'
-    assign sub_title_color = block.settings.sub_title_color | default: 'inherit'
+    assign background_color = settings.block_color | default: 'transparent'
+    assign text_color = settings.text_color | default: 'inherit'
+    assign title_color = settings.title_color | default: 'inherit'
+    assign sub_title_color = settings.sub_title_color | default: 'inherit'
+    assign badge_title_color = settings.badge_text_color | default: 'inherit'
 
-    assign pad_top = block.settings.padding_top
-    assign pad_bot = block.settings.padding_bottom
+    assign pad_top = settings.padding_top
+    assign pad_bot = settings.padding_bottom
 %}
 {%- capture styles -%}
     --sub_title_color-list-collections-menu: {{ sub_title_color }};
     --title-color-list-collections-menu: {{ title_color }};
+    --badge_title-color-list-collections-menu: {{ badge_title_color }};
     --text-color-list-collections-menu: {{ text_color }};
     --background-color-list-collections-menu: {{ background_color }};
     --pad-top-list-collections-menu: {{ pad_top }}px;
@@ -82,7 +82,12 @@
             </div>
         {% endif %}
         <div class="row list-collections-grid">
-            {% for collection in collections %}
+            {% for block in blocks %}
+                {% liquid
+                    assign collection = block.settings.featured_collections
+                    assign menu = block.settings.collection_menu.links
+                    assign button = block.settings.button_label
+                %}
                 <div class="{{columns_mobile_class}} {{ columns_class }} list-collections-grid__item">
                     <div class="card-collection">
                         <div class="card-collection__media-wrapper ">
@@ -103,13 +108,44 @@
                             <h3>
                                 <a href="{{ collection.url }}">
                                     {{ collection.title | escape }}
+                                    {% if count %}
+                                        ({{ collection.all_products_count }})
+                                    {% endif %}
                                 </a>
                             </h3>
-                            {% if count %}
-                                <h5>
-                                    {{ collection.all_products_count }}
-                                    {{ 'sections.collections.products' | t }}
-                                </h5>
+                            <ul class="card-collection__menu">
+                                {%- for link in menu -%}
+                                    {% liquid
+                                        if link.title contains ';'
+                                            assign badge = link.title | split: ',' | split: ';'
+                                            assign title = badge[0] | split: '["'
+                                            assign badge_name = badge[1]
+                                            assign badge_color = badge[2] | split: '"]'
+                                        else
+                                            assign title = link.title
+                                            assign badge_name = ''
+                                            assign badge_color = ''
+                                        endif
+                                    %}
+                                    <li class="card-collection__menu--item">
+                                        <a class="card-collection__menu--link" href="{{ link.url }}">
+                                            {{ title }}
+                                            {% if badge_name != blank %}
+                                                <span
+                                                    style="background:{{ badge_color }};"
+                                                    class="card-collection__menu--badge"
+                                                >
+                                                    {{ badge_name }}
+                                                </span>
+                                            {% endif %}
+                                        </a>
+                                    </li>
+                                {%- endfor -%}
+                            </ul>
+                            {% if button != blank %}
+                                <div class="card-collection__btn">
+                                    <a class="button button--secondary" href="{{ collection.url }}">{{ button }}</a>
+                                </div>
                             {% endif %}
                         </div>
                     </div>
