--- a/scss/components/component-mega-menu.scss
+++ b/scss/components/component-mega-menu.scss
@@ -171,7 +171,7 @@
         text-decoration: none;
         margin-left: .4rem;
         color: var(--header-badge-color);
-        border-radius: 0;
+        border-radius: var(--button-border-radius);
         padding: .1rem .4rem;
         position: absolute;
         right: 0;
