--- a/scss/sections/section-featured-list-collections-menu.scss
+++ b/scss/sections/section-featured-list-collections-menu.scss
@@ -1,5 +1,3 @@
-
-
 // style block menu
 
 .collections-menu {
@@ -62,7 +60,7 @@
     }
 
     .card-collection__media-wrapper {
-        margin-bottom: 2rem;
+        margin-bottom: 0;
     }
 
     .card-collection__media {
@@ -90,6 +88,10 @@
     }
 
     .card-collection__content {
+        background: #fff;
+        @media screen and (max-width: 767px) {
+            padding: 1rem;
+        }
         &.card-collection__content--left {
             text-align: left;
         }
@@ -107,6 +109,9 @@
             a {
                 text-decoration: none;
             }
+            @media screen and (max-width: 767px) {
+                font-size: calc(var(--font-heading-scale) * 1.2rem);
+            }
         }
 
         h5 {
@@ -115,6 +120,50 @@
             color: var(--text-color-list-collections-menu);
         }
     }
+
+    .card-collection__menu {
+        padding: 0;
+        margin: 1rem 0 2rem;
+        list-style: none;
+    }
+
+    .card-collection__menu--item {
+        position: relative;
+    }
+
+    .card-collection__menu--item + .card-collection__menu--item {
+        margin-top: 1rem;
+    }
+
+    .card-collection__menu--link {
+        text-transform: none;
+        font-size: 1.3rem;
+        line-height: 2rem;
+        display: inline-block;
+        text-decoration: none;
+    }
+    
+    .card-collection__menu--badge {
+        font-size: 1.2rem;
+        line-height: 1.4rem;
+        min-height: 1.8rem;
+        text-decoration: none;
+        margin-left: 0.4rem;
+        padding: 0.1rem 0.4rem;
+        position: absolute;
+        right: 0;
+        top: 0;
+        color: var(--badge_title-color-list-collections-menu);
+        border-radius: var(--button-border-radius);
+    }
+
+    .card-collection__content--right {
+        .card-collection__menu--badge { 
+            left: 0;
+            right: auto;
+        }
+    }
+
     @media screen and (max-width: 767px) {
         .list-collections-grid {
             overflow: auto;
