--- a/assets/section-featured-list-collections-menu.css
+++ b/assets/section-featured-list-collections-menu.css
@@ -80,6 +80,7 @@
 }
 .collections-menu .card-collection__content {
   background: #fff;
+  padding: 2rem;
 }
 @media screen and (max-width: 767px) {
   .collections-menu .card-collection__content {
@@ -105,6 +106,9 @@
   .collections-menu .card-collection__content h3 {
     font-size: calc(var(--font-heading-scale) * 1.2rem);
   }
+}
+.collections-menu .card-collection__content h3 span {
+  font-size: 12px;
 }
 .collections-menu .card-collection__content h5 {
   font-weight: 400;
