--- a/snippets/list-collections-style-block-menu.liquid
+++ b/snippets/list-collections-style-block-menu.liquid
@@ -108,9 +108,6 @@
                             <h3>
                                 <a href="{{ collection.url }}">
                                     {{ collection.title | escape }}
-                                    {% if count %}
-                                        ({{ collection.all_products_count }})
-                                    {% endif %}
                                 </a>
                             </h3>
                             <ul class="card-collection__menu">
@@ -144,7 +141,12 @@
                             </ul>
                             {% if button != blank %}
                                 <div class="card-collection__btn">
-                                    <a class="button button--secondary" href="{{ collection.url }}">{{ button }}</a>
+                                    <a class="button button--secondary" href="{{ collection.url }}">
+                                        {{- button -}}
+                                        {%- if count %}
+                                            <span>&nbsp;({{ collection.all_products_count }})</span>
+                                        {% endif -%}
+                                    </a>
                                 </div>
                             {% endif %}
                         </div>
