--- a/scss/sections/section-header.scss
+++ b/scss/sections/section-header.scss
@@ -2,6 +2,10 @@
     position: relative!important;
 }
 
+.index-header {
+    position: relative;
+}
+
 .header-wrapper {
     z-index: 10;
     width: 100%;
