--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -109,6 +109,7 @@
 {% schema %}
 {
     "name": "Header",
+    "class": "index-header",
     "settings": [
         {
             "type": "select",
