--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -51,9 +51,9 @@
                 -%}
 
                 {%- capture styles -%}
-                    --announcement-marquee-background-color: {{- background_color -}};
-                    --announcement-marquee-text-color: {{- text_color -}};
-                    --announcement-marquee-link-color: {{- text_color -}};
+                    --announcement-marquee-background-color: {{ background_color }};
+                    --announcement-marquee-text-color: {{ text_color }};
+                    --announcement-marquee-link-color: {{ link_color }};
                     --announcement-marquee-pad-top: {{ pad_top }}px;
                     --announcement-marquee-pad-bot: {{ pad_bot }}px;
                     {%- endcapture -%}
@@ -66,7 +66,7 @@
                     >
                         <div class="announcement-bar-marquee__wrapper container">
                             <div class="overflow-hidden">
-                                <div id="crawl-line">
+                                <div id="crawl-line" class="crawl-line">
                                     {% assign crawl_line = text | split: '<p>' %}
                                     {% for line in crawl_line %}
                                         {% assign crawl_text = line | split: '</p>' %}
@@ -94,6 +94,87 @@
                             startVisible: true,
                         })
                     </script>
+                {% endif %}
+            {% when 'countdown' %}
+                {%- liquid
+                    assign title = block.settings.title
+                    assign sub_title = block.settings.sub_title
+                    assign sale = block.settings.sale
+                    assign sale_number = block.settings.sale_number
+                    assign year = block.settings.countdown_date_year
+                    assign month = block.settings.countdown_date_month
+                    assign day = block.settings.countdown_date_day
+
+                    assign btn = block.settings.btn
+                    assign link = block.settings.link
+                    assign image = block.settings.image
+                    assign background_color = block.settings.background_color
+                    assign text_color = block.settings.text_color
+                    assign primary_color = block.settings.primary_color
+                    assign secondary_color = block.settings.secondary_color
+                    assign full_width = block.settings.full_width
+                    assign pad_top = block.settings.padding_top
+                    assign pad_bot = block.settings.padding_bottom
+                -%}
+
+                {%- capture styles -%}
+                        --announcement-countdown-background-color: {{ background_color }};
+                        --announcement-countdown-text-color: {{ text_color }};
+                        --announcement-countdown-primary-color: {{ primary_color }};
+                        --announcement-countdown-secondary-color: {{ secondary_color }};
+                        --announcement-countdown-pad-top: {{ pad_top }}px;
+                        --announcement-countdown-pad-bot: {{ pad_bot }}px;
+                      {%- endcapture -%}
+
+                {%- assign styles = styles | strip_newlines -%}
+                {% if title != blank %}
+                    <div
+                        class="announcement-bar-countdown full_width--{{ full_width }}"
+                        style="{{- styles -}}; background-image: url( {{ image | image_url: width: 2050  }} );"
+                    >
+                        <div class="announcement-bar-countdown__wrapper container">
+                            <div class="row">
+                                <div class="col-md-12  align-self-center announcement-bar-countdown__text">
+                                    <countdown-container data-date="{{ year }}/{{ month }}/{{ day }}">
+                                        <div id="countdown-{{ block.id }}" class="countdown-box">
+                                            <div class="days-container">
+                                                <div class="days"></div>
+                                                <div class="days-label">{{ 'header.days' | t }}</div>
+                                            </div>
+
+                                            <div class="hours-container">
+                                                <div class="hours"></div>
+                                                <div class="hours-label">{{ 'header.hours' | t }}</div>
+                                            </div>
+
+                                            <div class="minutes-container">
+                                                <div class="minutes"></div>
+                                                <div class="minutes-label">{{ 'header.minutes' | t }}</div>
+                                            </div>
+
+                                            <div class="seconds-container">
+                                                <div class="seconds"></div>
+                                                <div class="seconds-label">{{ 'header.seconds' | t }}</div>
+                                            </div>
+                                        </div>
+                                    </countdown-container>
+                                    <div class="countdown__block">
+                                        <div class="countdown__box-left">
+                                            <div class="countdown__text-title">{{ title }}</div>
+                                            <div class="countdown__text-sub-title">{{ sub_title }}</div>
+                                        </div>
+                                        <div class="countdown__box-right">
+                                            <div class="countdown__text-sale">{{ sale }}</div>
+                                            <div class="countdown__text-sale-number">{{ sale_number }}</div>
+                                        </div>
+                                    </div>
+                                    <div class="countdown__btn">
+                                        <a class="button button--primary button--middle" href="{{ link }}">{{ btn }}</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 {% endif %}
         {% endcase %}
     {% endfor %}
@@ -208,6 +289,342 @@
                     "type": "color",
                     "id": "link_color",
                     "label": "Link color"
+                },
+                {
+                    "type": "checkbox",
+                    "id": "full_width",
+                    "default": false,
+                    "label": "Enabled full width?"
+                },
+                {
+                    "type": "range",
+                    "id": "padding_top",
+                    "min": 0,
+                    "max": 60,
+                    "step": 5,
+                    "unit": "px",
+                    "label": "Padding top",
+                    "default": 10
+                },
+                {
+                    "type": "range",
+                    "id": "padding_bottom",
+                    "min": 0,
+                    "max": 60,
+                    "step": 5,
+                    "unit": "px",
+                    "label": "Padding bottom",
+                    "default": 10
+                }
+            ]
+        },
+        {
+            "name": "Info bar countdown",
+            "type": "countdown",
+            "settings": [
+                {
+                    "type": "text",
+                    "id": "title",
+                    "default": "Merry",
+                    "label": "Title"
+                },
+                {
+                    "type": "text",
+                    "id": "sub_title",
+                    "default": "Christmas",
+                    "label": "Sub Title"
+                },
+                {
+                    "type": "text",
+                    "id": "sale",
+                    "default": "Sale",
+                    "label": "Sale"
+                },
+                {
+                    "type": "text",
+                    "id": "sale_number",
+                    "default": "70% <span>off</span>",
+                    "label": "Sale number"
+                },
+                {
+                    "type": "text",
+                    "id": "btn",
+                    "default": "Shop now",
+                    "label": "Button"
+                },
+                {
+                    "type": "url",
+                    "id": "link",
+                    "label": "Link"
+                },
+                {
+                    "type": "header",
+                    "content": "Countdown date"
+                },
+                {
+                    "type": "checkbox",
+                    "id": "countdown_toggle",
+                    "label": "Show Countdown date",
+                    "default": false
+                },
+                {
+                    "type": "select",
+                    "id": "countdown_date_day",
+                    "label": "Day",
+                    "options": [
+                        {
+                            "value": "1",
+                            "label": "1"
+                        },
+                        {
+                            "value": "2",
+                            "label": "2"
+                        },
+                        {
+                            "value": "3",
+                            "label": "3"
+                        },
+                        {
+                            "value": "4",
+                            "label": "4"
+                        },
+                        {
+                            "value": "5",
+                            "label": "5"
+                        },
+                        {
+                            "value": "6",
+                            "label": "6"
+                        },
+                        {
+                            "value": "7",
+                            "label": "7"
+                        },
+                        {
+                            "value": "8",
+                            "label": "8"
+                        },
+                        {
+                            "value": "9",
+                            "label": "9"
+                        },
+                        {
+                            "value": "10",
+                            "label": "10"
+                        },
+                        {
+                            "value": "11",
+                            "label": "11"
+                        },
+                        {
+                            "value": "12",
+                            "label": "12"
+                        },
+                        {
+                            "value": "13",
+                            "label": "13"
+                        },
+                        {
+                            "value": "14",
+                            "label": "14"
+                        },
+                        {
+                            "value": "15",
+                            "label": "15"
+                        },
+                        {
+                            "value": "16",
+                            "label": "16"
+                        },
+                        {
+                            "value": "17",
+                            "label": "17"
+                        },
+                        {
+                            "value": "18",
+                            "label": "18"
+                        },
+                        {
+                            "value": "19",
+                            "label": "19"
+                        },
+                        {
+                            "value": "20",
+                            "label": "20"
+                        },
+                        {
+                            "value": "21",
+                            "label": "21"
+                        },
+                        {
+                            "value": "22",
+                            "label": "22"
+                        },
+                        {
+                            "value": "23",
+                            "label": "23"
+                        },
+                        {
+                            "value": "24",
+                            "label": "24"
+                        },
+                        {
+                            "value": "25",
+                            "label": "25"
+                        },
+                        {
+                            "value": "26",
+                            "label": "26"
+                        },
+                        {
+                            "value": "27",
+                            "label": "27"
+                        },
+                        {
+                            "value": "28",
+                            "label": "28"
+                        },
+                        {
+                            "value": "29",
+                            "label": "29"
+                        },
+                        {
+                            "value": "30",
+                            "label": "30"
+                        },
+                        {
+                            "value": "31",
+                            "label": "31"
+                        }
+                    ]
+                },
+                {
+                    "type": "select",
+                    "id": "countdown_date_month",
+                    "label": "Month",
+                    "options": [
+                        {
+                            "value": "01",
+                            "label": "January"
+                        },
+                        {
+                            "value": "02",
+                            "label": "February"
+                        },
+                        {
+                            "value": "03",
+                            "label": "March"
+                        },
+                        {
+                            "value": "04",
+                            "label": "April"
+                        },
+                        {
+                            "value": "05",
+                            "label": "May"
+                        },
+                        {
+                            "value": "06",
+                            "label": "June"
+                        },
+                        {
+                            "value": "07",
+                            "label": "July"
+                        },
+                        {
+                            "value": "08",
+                            "label": "August"
+                        },
+                        {
+                            "value": "09",
+                            "label": "September"
+                        },
+                        {
+                            "value": "10",
+                            "label": "October"
+                        },
+                        {
+                            "value": "11",
+                            "label": "November"
+                        },
+                        {
+                            "value": "12",
+                            "label": "December"
+                        }
+                    ]
+                },
+                {
+                    "type": "select",
+                    "id": "countdown_date_year",
+                    "label": "Year",
+                    "options": [
+                        {
+                            "value": "2023",
+                            "label": "2023"
+                        },
+                        {
+                            "value": "2024",
+                            "label": "2024"
+                        },
+                        {
+                            "value": "2025",
+                            "label": "2025"
+                        },
+                        {
+                            "value": "2026",
+                            "label": "2026"
+                        },
+                        {
+                            "value": "2027",
+                            "label": "2027"
+                        },
+                        {
+                            "value": "2028",
+                            "label": "2028"
+                        },
+                        {
+                            "value": "2029",
+                            "label": "2029"
+                        },
+                        {
+                            "value": "2031",
+                            "label": "2031"
+                        },
+                        {
+                            "value": "2032",
+                            "label": "2032"
+                        }
+                    ]
+                },
+                {
+                    "type": "paragraph",
+                    "content": "Style options"
+                },
+                {
+                    "type": "image_picker",
+                    "id": "image",
+                    "label": "Image",
+                    "info": "The image should be more than 2050px wide to resize and crop properly"
+                },
+                {
+                    "type": "color",
+                    "id": "background_color",
+                    "label": "Background color"
+                },
+                {
+                    "type": "color",
+                    "id": "text_color",
+                    "label": "Text color"
+                },
+                {
+                    "type": "color",
+                    "id": "primary_color",
+                    "label": "Primary color"
+                },
+                {
+                    "type": "color",
+                    "id": "secondary_color",
+                    "label": "Secondary color"
                 },
                 {
                     "type": "checkbox",
