--- a/scss/sections/section-announcement-bar-default.scss
+++ b/scss/sections/section-announcement-bar-default.scss
@@ -218,3 +218,74 @@
         }
     }
 }
+
+// style promo
+
+.announcement-bar-promo {
+    background: var(--announcement-promo-background-color);
+    overflow-x: hidden;
+    overflow-y: auto;
+    color: var(--announcement-promo-text-color);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    z-index: -99;
+    transition: all .3s ease;
+    margin-top: 3rem;
+    &.promo-popup--show {
+        opacity: 1;
+        z-index: 999;
+        margin-top: 0;
+        .promo-popup__wrapper {
+            opacity: 1;
+            transition: all .5s ease-in-out;
+            transform: translate(0);
+        }
+    }
+    .promo-popup__wrapper {
+        max-width: 600px;
+        margin: 5rem 2rem 2rem;
+        height: auto;
+        position: relative;
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    .promo-popup__close {
+        background: none;
+        border: none;
+        padding: 3rem;
+        margin: 0;
+        color: var(--announcement-promo-text-color);
+        position: absolute;
+        right: 0;
+        top: -3rem;
+        transition: all .3s ease;
+        &:hover {
+            color: var(--announcement-promo-link-color);
+        }
+    }
+    .promo-popup__image {
+        margin-bottom: 3rem;
+    }
+    .promo-popup__title {
+        color: var(--announcement-promo-text-color);
+        margin-bottom: 1rem;
+        span {
+            display: block;
+            margin-top: -1rem;
+        }
+    }
+    .promo-popup__text,
+    .promo-popup__sub-title {
+        color: var(--announcement-promo-link-color);
+    }
+    .promo-popup__btn {
+        margin-top: 3rem;
+    }
+}
